nextcloud/ingress-nextcloud-ui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-ui
  namespace: nextcloud
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: traefik-geoip-country@kubernetescrd,nextcloud-hsts@kubernetescrd,traefik-robots-disallow-all@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - cloud.andreybondarenko.com
      secretName: nextcloud-tls
  rules:
    - host: cloud.andreybondarenko.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-nextcloud
                port:
                  number: 8080
